public/global.css
body {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin: 0;
  min-height: 100%;
  background: linear-gradient(185deg, #242424, #060606);
  background-size: 100%;
  -webkit-animation: background 0s ease infinite;
  -moz-animation: background 0s ease infinite;
  animation: background 0s ease infinite; }
/*# sourceMappingURL=global.css.map */

